# pyblish-config

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
pyblish_config/: __init__.py  config.py  config_creator.py  config_creator_GUI.py  pipelineconfig.py  plugin_browser.py
pyblish_config_creator/: README.md  config_creator_GUI.py
pyblish_extended/: Plugin.py
pyblish_extended/convertor/: convertor_pymesh_meshname.py  testing_convertor.py
pyblish_extended/convertor/plugins/: convertor_string_int.py
sample/: pyblish isnta setup.txt  readme.md  sample_apply_config.py  sample_config.json  sample_create_config.py  sample_filter_config.py  snipper_maya_create_config_UI.py  snipper_maya_create_config_code.py
sample/test files/: conmpare.txt  rules.txt
sample/test files/marketplace (same as projects)/collect all meshes/: collect_meshes.py
sample/test files/projects/battling field SHOOTER/: BF_obj_car.ma  BF_obj_gun.ma
sample/test files/projects/final fantasia FANTASY RPG/meshes/: FF_char_alice.ma  F_obj_pistol.ma
sample/test files/projects/pyblish starter/validate mesh normals/: readme.md  validate_normals.py
sample/validate_folder/: readme.md  sample_config_folder.json  sample_validate_folder.py  sample_validate_folder_BF.py  sample_validate_folder_BF_create_config.py  sample_validate_folder_BF_load.py  sample_validate_folder_FF.py
sample/validate_folder/plugins/: CollectFilePaths.py  ValidateFilePaths.py
