[build-system]
requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["pyblish_config"]


[project]
name = "pyblish-config"
authors = [
    {name = "Hannes"},
]
description = "use configs with pyblish"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["plugin", "addon", "add-on", "extension", "manager", "studio", "dcc", "pipeline"]
#license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
#dynamic = ["dependencies"]
dependencies = ['importlib-metadata; python_version<"3.7"']
#dynamic = ["version"]
version = "0.0.12"

#[project.optional-dependencies]
#yaml = ["pyyaml"]

#[project.scripts]
#my-script = "my_package.module:function"

[project.urls]
Homepage = "https://github.com/hannesdelbeke/pyblish-plugin-manager"
Source = "https://github.com/hannesdelbeke/pyblish-plugin-manager"
